# antivirus_check_service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.scanfile  Dockerfile.scanfile.alpine  Dockerfile.scanurl  Dockerfile.scanurl.20191118  Dockerfile.webserver  Makefile  README.md  Vagrantfile  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: build_push_service.yml  dependabot.yml
.github/workflows/: build_push_service.yml  clean.yml  dependency-review.yml  main.yml  push.yml  tag.yml
ansible/group_vars/all/: antivirus_check_service.yml
ansible/group_vars/develop/: antivirus_check_service.yml
ansible/group_vars/reference/: antivirus_check_service.yml
ansible/roles/antivirus_check_service/meta/: main.yml
ansible/roles/antivirus_check_service/tasks/: main.yml
ansible/roles/antivirus_check_service/templates/: onepassword.yml.j2  scanfile-deployment.yml.j2  scanfile-scaled-object.yml.j2  scanfile-svc.yml.j2  secret.yml.j2  web-deployment.yml.j2  web-svc.yml.j2
antivirus_service/: clamd.py  clamd.py.copy  config.template.yml  consumer.py  handler.py  pyclamd_overrride.py  service.py  webserver.py
resources/: antivirus-scanfile.service  antivirus-scanurl.service  antivirus-webserver.service  config.template.yml  develop_webserver.py  encrypt_rabbitmq_password.py  no_virus.txt  rabbitmq-definitions.template.json  rabbitmq.config  scan_no_virus_file_payload.json  scan_no_virus_large_file_payload.json  scan_no_virus_url_payload.json  scan_virus_file_payload.json  virus.txt  wrong_paylod_payload..json
