[project]
name = "antivirus_check_service"
version = "0.1.0"
description = "tbd"
requires-python = ">=3.14"
dependencies = [
	"requests==2.33.1",
	"click==8.3.1",
	"pyClamd==0.4.0",
	"aiohttp==3.13.3",
	"PyYAML==6.0.3",
	"pika==1.3.2",
	"aio_pika==9.6.2",
	"environs==14.6.0"
]

[project.scripts]
antivirus = "antivirus_service.service:main"

[build-system]
requires = ["uv_build>=0.7.19,<0.8"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "antivirus_service"
module-root = ""

